...
function BeerListScreen() {
  const colorScheme = useColorScheme() ?? 'dark';
  const colors = Colors[colorScheme];

  return (
    <View
      testID="all-beers-container"
      style={[styles.container, { backgroundColor: colors.background }]}
    >
      <ChromeStatusBar />
      <View style={styles.headerContainer}>
        <ScanlineTitle title="All Beer" />
      </View>
...
